--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push alpine image
         uses: docker/build-push-action@v5
         with:
@@ -29,13 +33,23 @@ jobs:
           file: ./Dockerfile.alpine
           tags: |
             ayushshanker/poetry:alpine
-            ayushshanker/poetry:alpine-py3.12
+
       - name: Build and push ubuntu image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          file: ./Dockerfile.ubuntu
+          push: true
+          tags: |
+            ayushshanker/poetry:ubuntu
+
+      - name: Build and push al2023 image
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
+            ayushshanker/poetry:al
             ayushshanker/poetry:latest
-            ayushshanker/poetry:py3.12
